--- a/project.config.json
+++ b/project.config.json
@@ -21,7 +21,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.7.7",
 	"appid": "wxabab99381fac88cb",
-	"projectname": "%E5%9B%BE%E4%B9%A6%E9%A6%86%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F",
+	"projectname": "damaiwang",
 	"isGameTourist": false,
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
